--- a/src/html/login.html
+++ b/src/html/login.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>login</h1>
+    <form action="">
+        <input type="text" id="username">
+        <input type="text" id="password">
+    </form>
 </body>
 </html>
